src/components/PageComponents/Home/NewsScreen/NewsRow/style.module.scss
.modalBg {
  outline: none;
  border: none;

  display: flex;
  justify-content: center;
  position: absolute;
  top: 0;
  padding: $spacing;

  // Escape parent to fill screen
  width: calc(100vw - 1.05rem); // -1.05 rem for scrollbar
  height: 100%;
  margin-left: calc(-50vw + 50%);

  animation: backdropBlur forwards ease-out 0.1s;

  background-color: transparent;

  z-index: 1;

  .modal {
    max-width: 40rem;
    max-height: calc(100vh - 6rem);
    overflow: hidden;
    overflow-y: scroll;
    padding: $spacing;
    height: fit-content;

    animation: modalSlide both ease-out 0.3s 0.1s;

    background-color: $color-background;
    border-radius: $border-radius;

    // @extend %cardShadow has hover effect. We only need the shadow
    box-shadow: var(--cardShadow);
  }
}

.newsRow {
  display: flex;
  position: relative;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  margin-block: $spacing;
  padding: $spacing;

  &:hover {
    background-color: $color-background-card;
    cursor: pointer;
  }

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    content: "";
    height: 100%;
    width: 0.1rem;
    border-radius: 100vmax;
    background-color: $color-primary;
  }

  // Title
  > h4 {
    padding: 0;
    margin: 0;
    margin-bottom: $spacing / 2;
    line-height: 1;
    width: 100%;

    .type {
      font-size: 0.75rem;
      &::before {
        content: " - ";
      }
    }
  }

  // Short description
  > p {
    display: inline;
    width: 70%;
    margin: 0;
    font-size: 0.75rem;
  }

  // Modal button
  > button {
    height: fit-content;
    padding: 0.5rem;

    line-height: 1;
    border-radius: $border-radius;
  }
}

@keyframes backdropBlur {
  0% {
    backdrop-filter: blur(10px) opacity(0);
  }
  100% {
    backdrop-filter: blur(10px) opacity(1);
  }
}

@keyframes modalSlide {
  0% {
    opacity: 0;
    transform: translateY(-1rem);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

